fixing line breaks and maybe mobile video alignment

--- a/assets/css/mit-responsive.css
+++ b/assets/css/mit-responsive.css
@@ -61,4 +61,7 @@
 	h3 {
 		font-size: 35px;
 	}
+	.videoWrapper {
+	margin: -5px 5px 25px 5px;
+	}
 }
